@@ -521,7 +521,11 @@ Player::content_changed (weak_ptr<Content> w, int property, bool frequent)
 		_have_valid_pieces = false;
 		Changed (frequent);
 
-	} else if (property == SubtitleContentProperty::SUBTITLE_OFFSET || property == SubtitleContentProperty::SUBTITLE_SCALE) {
+	} else if (
+		property == SubtitleContentProperty::SUBTITLE_X_OFFSET ||
+		property == SubtitleContentProperty::SUBTITLE_Y_OFFSET ||
+		property == SubtitleContentProperty::SUBTITLE_SCALE
+		) {
 
 		update_subtitle ();
 		Changed (frequent);
@@ -658,7 +662,8 @@ Player::update_subtitle ()
 	dcpomatic::Rect<double> in_rect = _in_subtitle.rect;
 	libdcp::Size scaled_size;
 
-	in_rect.y += sc->subtitle_offset ();
+	in_rect.x += sc->subtitle_x_offset ();
+	in_rect.y += sc->subtitle_y_offset ();
 
 	/* We will scale the subtitle up to fit _video_container_size, and also by the additional subtitle_scale */
 	scaled_size.width = in_rect.width * _video_container_size.width * sc->subtitle_scale ();
